// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Text with fontFamily 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Regular",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
  style={
    Object {
      "fontFamily": "Helvetica",
    }
  }
/>
`;

exports[`<Text /> Text with fontFamily, fontWeight 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Bold",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
  style={
    Object {
      "fontFamily": "Helvetica",
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`<Text /> Text with fontFamily, fontWeight, fontStyle 1`] = `
<text
  fontName={
    Object {
      "family": "Helvetica",
      "style": "Bold Italic",
    }
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
  style={
    Object {
      "fontFamily": "Helvetica",
      "fontStyle": "italic",
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`<Text /> Text with maxWidth 1`] = `
<text
  hasDefinedWidth="100%"
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
  style={
    Object {
      "maxWidth": "100%",
    }
  }
/>
`;

exports[`<Text /> Text with width 1`] = `
<text
  hasDefinedWidth={200}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
  style={
    Object {
      "width": 200,
    }
  }
  width={200}
/>
`;

exports[`<Text /> Text without props 1`] = `
<text
  innerRef={
    Object {
      "current": undefined,
    }
  }
  loadedFont={null}
/>
`;
